@@ -475,7 +475,7 @@ module List :
 	val print : ?first:string -> ?last:string -> ?sep:string -> ('a InnerIO.output -> 'b -> unit) ->  'a InnerIO.output -> 'b t -> unit
 	  (**Print the contents of a list*)
 
-	val print_string : ?first:string -> ?last:string -> ?sep:string -> (string InnerIO.output -> 'b -> unit) -> 'b t -> string
+	val sprint : ?first:string -> ?last:string -> ?sep:string -> ('a InnerIO.output -> 'b -> unit) -> 'b t -> string
 	  (** Using a string printer, print a list to a string (as sprintf vs. printf) *)
 
 	(** {6 Obsolete functions} *)
