@@ -1,4 +1,13 @@
+2008-11-09  David Teller  <David.Teller@univ-orleans.fr>
+
+	* src/core/extlib/extList.ml: [print_string] reimplemented with [sprintf2]
+
+	* src/core/extlib/extList.ml*: [print_string] renamed [sprint]
+
+
 2008-11-08  David Teller  <David.Teller@univ-orleans.fr>
+
+	* src/core/extlib/IO.ml*: [copy] now accepts an additional argument
 
 	* src/core/_tags: [extlib_threads] added
 
